Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115054

QWidget::createWindowContainer does not work on 6.5.1

XMLWordPrintable

    • WebAssembly
    • 0493504f3 (dev), b9c4fb7e6 (6.6), bd86ae385 (6.5)

      Using the linked test project, here is the result on desktop platform (6.5.1 or 6.5.0 behave exactly same):

      When compiling for WebAssembly, using 6.5.0, behavior is the same:

      But when using WebAssembly with 6.5.1, we have a sub-window which is created:

      Which we can move around.

       

      Note that it reset to it's default place / position on firefox window resize.

       

      Expected behavior:

      • on 6.5.1, the sub-window should not have decorations

        1. CMakeLists.txt
          1.0 kB
        2. image-2023-07-04-16-49-47-242.png
          image-2023-07-04-16-49-47-242.png
          12 kB
        3. image-2023-07-04-16-50-35-170.png
          image-2023-07-04-16-50-35-170.png
          28 kB
        4. image-2023-07-04-16-51-22-953.png
          image-2023-07-04-16-51-22-953.png
          28 kB
        5. image-2023-07-04-16-52-02-620.png
          image-2023-07-04-16-52-02-620.png
          28 kB
        6. main.cpp
          0.5 kB
        7. Main.qml
          0.1 kB
        8. mainwindow.cpp
          0.4 kB
        9. mainwindow.h
          0.3 kB
        10. mainwindow.ui
          0.9 kB
        For Gerrit Dashboard: QTBUG-115054
        # Subject Branch Project Status CR V

            piwierci Piotr Wierciński
            qtdel Quentin Deldycke
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes