wasm: Render Qt::SubWindow borderless

Windows with Qt::SubWindow flag should not have platform decoration.

Fixes: QTBUG-115054
Change-Id: I7111df6057a087080194c1d46e350df839bec437
Reviewed-by: Lorn Potter <lorn.potter@gmail.com>
(cherry picked from commit 0493504f34c6673e05be630d8096cf2a78a780b1)