src/plugins/platforms/wasm/qwasmwindow.h
@@ -97,6 +97,8 @@ private:
     static constexpr auto minSizeForRegularWindows = 100;
 
     void invalidate();
+    bool hasFrame() const;
+    bool hasTitleBar() const;
     bool hasBorder() const;
     bool hasShadow() const;
     bool hasMaximizeButton() const;
